--- a/Deployment.yml
+++ b/Deployment.yml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-Kind: Deployment
+kind: Deployment
 metadata: 
   name: reddit-clone-deployment
 spec:
@@ -21,7 +21,7 @@ spec:
           - containersPort: 3000
 ---
 apiVersion: v1
-Kind: Service
+kind: Service
 metadata: 
   name: reddit-clone-svc
 spec: 
